# HippoChat

./: .gitignore  Dockerfile  pyproject.toml
+GPT_Psychopathology/: chroma-collections.parquet  chroma-embeddings.parquet
+Sample DB/index/: id_to_uuid_37218069-8f4c-4406-8d17-ba6c513cf7f9.pkl  index_metadata_37218069-8f4c-4406-8d17-ba6c513cf7f9.pkl  uuid_to_id_37218069-8f4c-4406-8d17-ba6c513cf7f9.pkl
hippochat/: .env  app.py  ingest.py  utilities.py
